k8s/msa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msa
spec:
  replicas: 3
  selector:
    matchLabels:
      app: msa
  template:
    metadata:
      labels:
        app: msa
        event: js202
    spec:
      containers:
      - image: gcr.io/ind-si-infra-managment-184960/js2020:latest
        imagePullPolicy: Always
        name: js2020
        ports:
        - containerPort: 8080
        volumeMounts:
        # volumes to mount
        - name: secret-volume # matches secret name
          # path for this secret to be available at
          mountPath: "/opt/firebase/"
          readOnly: true # no editing!
      volumes:
      # create volumes
      - name: secret-volume # name to match for mounting
        secret:
          secretName: firebase-secret # name of secret
