k8s/msa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msa-service
spec:
  type: NodePort
  selector:
    app: msa
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
